[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
eyre = "0.6.12"
log = { version = "0.4.21", features = ["std"] }
markup = "0.15.0"
nanoid = "0.4.0"
redis = { version = "0.25.3", features = ["tokio-comp"] }
reqwest = "0.12.4"
serde = "1.0.202"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sessions = { version = "0.6.0", features = ["memory"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
viz = { version = "0.8.4", features = ["compression", "cookie-signed", "csrf", "fs", "handlers", "http2", "rustls", "unix-socket"] }
